# mtld3d

./: .gitignore  INSTALL.md  LICENSE  Makefile  README.md  mtld3d.conf  rustfmt.toml
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  CONVENTIONS.md
scripts/: audit.sh  derive_inventory.txt
unix/: Cargo.toml
unix/.cargo/: config.toml
unix/conformance/: CONFORMANCE.md  Cargo.toml  baseline.txt
unix/conformance/src/: classify.rs  cli.rs  diff.rs  docsync.rs  isolate.rs  main.rs  merge.rs  model.rs  run.rs  scan.rs  triage.rs
unix/conformance/tests/fixtures/: clean.txt  d3d9ex.txt  device.txt  stateblock.txt  visual.txt
unix/shared/: Cargo.toml  build.rs
unix/shared/src/: commands.rs  crumb.rs  ffi_boundary.rs  ftol.rs  lib.rs  log_filter.rs  log_helpers.rs  mtl.rs  mtl_handle.rs  params.rs  perf.rs  trig.rs  tsc.rs
unix/unix/: Cargo.toml  build.rs
unix/unix/src/: crash.rs  handlers.rs  lib.rs  metal.rs
unix/unix/src/metal/: blit.rs  buffer.rs  capture.rs  clear_quad.rs  command.rs  device.rs  handle.rs  hdr_present.msl  hdr_present.rs  macdrv.rs  pipeline.rs  sampler.rs  shader.rs  texture.rs
windows/: Cargo.toml
windows/.cargo/: config.toml
windows/.config/: nextest.toml
windows/core/: Cargo.toml  build.rs
windows/core/examples/: disasm.rs
windows/core/src/: buffer_rename.rs  caps.rs  config.rs  convert.rs  dirty_range.rs  dirty_rect.rs  dxso.rs  ff_state.rs  format.rs  gpu_caps.rs  ids.rs  lib.rs  page_box.rs  passes.rs  perf.rs  pipeline_state.rs  present.rs  sampler_state.rs  scratch.rs  shader_cache.rs  shader_compile_stats.rs  state_trace.rs  storage_policy.rs  stretch_rect.rs  texture_staging.rs  visibility.rs
windows/core/src/dxso/: emit.rs  emit_tests.rs  ff.rs  ff_tests.rs  ir.rs  opcode.rs  parser.rs  parser_tests.rs
windows/d3d9/: Cargo.toml  build.rs  d3d9.def
windows/d3d9/src/: bound_buffers.rs  bound_rt.rs  capture.rs  com_ref.rs  config.rs  crash.rs  crumb_allocator.rs  cursor.rs  device.rs  direct3d9.rs  draw.rs  encoder.rs  index_buffer.rs  lib.rs  pixel_shader.rs  private_data.rs  query.rs  shader_bindings.rs  shader_prewarm.rs  shader_validator.rs  stage_bindings.rs  state_block.rs  surface.rs  swapchain.rs  texture.rs  unix_call.rs  vertex_buffer.rs  vertex_decl.rs  vertex_shader.rs
windows/shim/: Cargo.toml  build.rs
windows/shim/src/: lib.rs
windows/tests/: COVERAGE.md  Cargo.toml
windows/tests/src/: check.rs  ffi.rs  harness.rs  lib.rs  pixel.rs  resource.rs  vertex.rs  vtbl.rs  win32.rs
windows/tests/tests/: buffers.rs  device.rs  draw.rs  implicit_surface.rs  query.rs  render_states.rs  render_target.rs  resource_misc.rs  samplers.rs  shaders.rs  smoke.rs  state_block.rs  texture_stages.rs  textures.rs  transforms_ff.rs  vertex_decl.rs
windows/types/: Cargo.toml
windows/types/src/: cursor.rs  device.rs  direct3d9.rs  ff.rs  hresult.rs  index_buffer.rs  lib.rs  primitive.rs  vertex_buffer.rs  vertex_decl.rs
