[workspace]
members = ["unix", "shared", "conformance"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.97"
version = "0.1.0"
license = "Zlib"
description = "Direct3D 9 translation layer for Wine on macOS, backed by Metal"
authors = ["Alexander Theissen <alex.theissen@me.com>"]
keywords = ["direct3d", "d3d9", "metal", "wine", "macos"]
categories = ["graphics", "emulators", "api-bindings"]
repository = "https://github.com/athei/mtld3d"
homepage = "https://github.com/athei/mtld3d"

[workspace.dependencies]
bitflags = "2"
block2 = "0.6"
mtld3d-shared = { path = "shared" }
env_logger = { version = "0.11", default-features = false, features = ["auto-color", "humantime"] }
libc = "0.2"
libloading = "0.9"
log = "0.4"
# `disable-encoding-assertions` turns off objc2's debug-only runtime
# message-send verification. Under an Xcode GPU capture, Metal substitutes a
# `CaptureMTLDevice` proxy that forwards `MTLDevice` methods dynamically rather
# than declaring them on its class; that verification inspects the class method
# table (which does not see dynamic forwarding) and aborts a `release`/`dev`
# build with "method not found" before the forwarded call can run. We use only
# generated typed bindings (no hand-rolled `msg_send!`), so the check only ever
# produces that false positive here — disabling it lets the real, forwarded
# value come back and makes capturable debug builds behave like production.
objc2 = { version = "0.6", features = ["disable-encoding-assertions"] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "NSColorSpace",
    "NSResponder",
    "NSScreen",
    "NSView",
    "NSWindow",
    "objc2-core-foundation",
    "objc2-core-graphics",
] }
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes"] }
objc2-core-graphics = { version = "0.3", features = ["CGColorSpace"] }
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSURL",
    "NSProcessInfo",
    "NSNotification",
    "NSOperation",
    "block2",
] }
objc2-metal = { version = "0.3", features = [
    "MTLBuffer",
    "MTLCaptureManager",
    "MTLCommandQueue",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLDepthStencil",
    "MTLDevice",
    "MTLDrawable",
    "MTLLibrary",
    "MTLPixelFormat",
    "MTLRenderCommandEncoder",
    "MTLRenderPass",
    "MTLRenderPipeline",
    "MTLResource",
    "MTLSampler",
    "MTLTexture",
    "MTLTypes",
    "MTLVertexDescriptor",
] }
objc2-quartz-core = { version = "0.3", features = ["CAMetalLayer", "objc2-metal"] }
strum = { version = "0.28", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "thin"
# Match windows/Cargo.toml — limited debug info for post-mortem
# symbolication of mtld3d.so crashes (e.g. NSException stack traces).
# Function names + line tables + inline frame chain. On Mach-O the
# debug info goes into the binary itself; the size delta is dev-only
# disk and never loaded into RAM unless a debugger asks.
debug = 1

# `release` is our dev/debug profile (the `make` build + e2e run against it),
# so carry the debugging checks here: `debug-assertions` (every `debug_assert!`)
# and `overflow-checks` (panic on integer wrap). `production` overrides both
# back off below.
debug-assertions = true
overflow-checks = true

# Shipped builds — fat cross-crate LTO + a single codegen unit so the
# linker can inline and DCE across the whole dylib. Inherits panic, debug,
# opt-level, incremental from `release`, but overrides `debug-assertions` +
# `overflow-checks` back off (release carries them for dev/test; the shipped
# artifact must not). Activated by `PROD=1 make`.
[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1
debug-assertions = false
overflow-checks = false

# Warn-level so a plain `cargo clippy` (or an editor) reports findings without
# hard-failing; the hard gate is `make check`, which denies every warning via
# cargo's `build.warnings = "deny"`.
[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Stricter unsafe discipline (see docs/CONVENTIONS.md §"Unsafe is a last resort").
missing_safety_doc = "warn"
not_unsafe_ptr_arg_deref = "warn"
transmute_ptr_to_ref = "warn"
multiple_unsafe_ops_per_block = "warn"
undocumented_unsafe_blocks = "warn"
# Length is a poor proxy for complexity; allow long procedural functions
# (frame encoder, MSL codegen templates, per-opcode dispatchers) where the
# structural alternative is fragmented helpers threading the same state.
too_many_lines = "allow"
