[package]
name = "mtld3d"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
mtld3d-shared = { workspace = true }
log = { workspace = true }

[lints]
workspace = true
